--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Kedvenc idézeteim</h1>
     <div id="idezet">asd</div>
-    <div id="gombok"><button onclick="balra()"><-</button> <button>Kedvencekhez adás</button> <button onclick="jobbra()">-></button></div>
+    <div id="gombok"><button onclick="balra()"><-</button> <button onclick="hozad_kedv()">Kedvencekhez adás</button> <button onclick="jobbra()">-></button></div>
     <div id="kedvenc"></div>
 </body>
 </html>
