--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="idezetek.js" defer></script>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Kedvenc idézeteim</h1>
-    <div id="idezet">asd</div>
-    <div id="gombok"><button onclick="balra()"><-</button> <button onclick="hozad_kedv()">Kedvencekhez adás</button> <button onclick="jobbra()">-></button></div>
-    <div id="kedvenc"></div>
+    <div>
+        <h1>Kedvenc idézeteim</h1>
+        <div id="idezet"></div>
+        <div id="gombok"><button onclick="balra()"><-</button> <button onclick="hozad_kedv()">Kedvencekhez adás</button> <button onclick="jobbra()">-></button></div>
+        <h2>Kedvenc idézetek:</h2>
+        <div id="kedvenc"></div>
+    </div>
+    
 </body>
 </html>
