--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div>
         <h1>Kedvenc idézeteim</h1>
         <div id="idezet"></div>
-        <div id="gombok"><button onclick="balra()"><-</button> <button onclick="hozad_kedv()">Kedvencekhez adás</button> <button onclick="jobbra()">-></button></div>
+        <div id="gombok"><button id="bal" onclick="balra()"><-</button> <button onclick="hozad_kedv()">Kedvencekhez adás</button> <button id="jobb" onclick="jobbra()">-></button></div>
         <h2>Kedvenc idézetek:</h2>
         <div id="kedvenc"></div>
     </div>
